clean up website

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,12 +3,13 @@ project:
   type: website
   output-dir: _output
   render:
-    # - auxilary/introduction_to_rstudio_for_accfin.qmd
-    # - slides/slides1.qmd
-    # - slides/slides2.qmd
-    # - slides/slides3.qmd
-    # - slides/slides4.qmd
-    # - slides/slides5.qmd
+    - method_package.qmd
+    - auxilary/introduction_to_rstudio_for_accfin.qmd
+    - slides/slides1.qmd
+    - slides/slides2.qmd
+    - slides/slides3.qmd
+    - slides/slides4.qmd
+    - slides/slides5.qmd
     - freaky_friday/index.qmd
     - freaky_friday/download_linking.qmd
     - freaky_friday/linking.qmd
@@ -25,6 +26,7 @@ website:
     contents:
       - section: "Introduction"
         contents:
+        - method_package.qmd
         - auxilary/introduction_to_rstudio_for_accfin.qmd
       - section: "Slides"
         contents:
