--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,6 +23,8 @@ website:
   sidebar:
     style: docked
     search: true
+    collapse-level: 1
+    page-navigation: true
     contents:
       - section: "Introduction"
         contents:
