--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,18 +12,18 @@ project:
     - slides/slides3.qmd
     - slides/slides4.qmd
     - slides/slides5.qmd
-    # - freaky_friday/index.qmd
-    # - freaky_friday/download_linking.qmd
-    # - freaky_friday/linking.qmd
-    # - freaky_friday/download_data.qmd
-    # - freaky_friday/download_stocks.qmd
-    # - freaky_friday/abnormal_returns.qmd
-    # - freaky_friday/descriptive.qmd
-    # - freaky_friday/regressions.qmd
-    # - freaky_friday/assignment.qmd
-    # - machine_learning/*.qmd
-    # - generalised/*.qmd
-    # - generated/*.qmd
+    - freaky_friday/index.qmd
+    - freaky_friday/download_linking.qmd
+    - freaky_friday/linking.qmd
+    - freaky_friday/download_data.qmd
+    - freaky_friday/download_stocks.qmd
+    - freaky_friday/abnormal_returns.qmd
+    - freaky_friday/descriptive.qmd
+    - freaky_friday/regressions.qmd
+    - freaky_friday/assignment.qmd
+    - machine_learning/*.qmd
+    - generalised/*.qmd
+    - generated/*.qmd
 
 website:
   page-navigation: true
